@@ -1,3 +1,14 @@
+2025-01-07  Thierry Onkelinx <thierry.onkelinx@inbo.be>
+
+	* R/sha1.R (sha1.default): Tweak message
+	* man/sha1.R: Extend fallback discussion
+
+2025-01-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/sha1.R (sha1.default): Revert to warning
+	* man/sha1.R: Document fallback, provide reference to package
+	implementing local S3 dispatch override methods
+
 2025-01-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
